--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +12,15 @@
 	<!-- styles -->
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-	
+
 	<h1>hello JS</h1>
 	<p>'use strict' - to enter strict mode</p>
 
 	<!-- script imports  -->
 	<script src="js/script.js"></script>
+	<script src="js/test.js"></script>
 </body>
+
 </html>
