added object functions

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
 	<!-- script imports  -->
 	<script src="js/script.js"></script>
-	<script src="js/test.js"></script>
+	<!-- <script src="js/test.js"></script> -->
 </body>
 
 </html>
