--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
 	<p>'use strict' - to enter strict mode</p>
 
 	<!-- script imports  -->
-	<script src="js/script.js"></script>
+	<!-- <script src="js/script.js"></script> -->
+	<script src="js/workshop.js"></script>
 	<!-- <script src="js/test.js"></script> -->
 </body>
 
