clear for the new module

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,7 @@
 	<p>'use strict' - to enter strict mode</p>
 
 	<!-- script imports  -->
-	<!-- <script src="js/script.js"></script> -->
-	<script src="js/workshop.js"></script>
-	<!-- <script src="js/test.js"></script> -->
+	<script src="js/script.js"></script>
 </body>
 
 </html>
